# scrybuy-api

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/scrybuy-api/: main.py
